include_HEADERS = \
	byteorder.h\
	cipher.h\
	config.h\
	convdata.h\
	fq_ap.h\
	fq_atob.h\
	fq_base64_std.h\
	fq_cache.h\
	fq_codemap.h\
	fq_common.h\
	fq_conf.h\
	fq_config.h\
	fq_defs.h\
	fq_dir.h\
	fq_e2e.h\
	fq_eventlog.h\
	fq_external_env.h\
	fq_fstat.h\
	fq_global.h\
	fq_info.h\
	fq_info_param.h\
	fq_logger.h\
	fq_manage.h\
	fq_map.h\
	fq_mask.h\
	fq_monitor.h\
	fq_multi_config.h\
	fq_nonblock.h\
	fq_param.h\
	fq_posixlib.h\
	fq_protocol.h\
	fq_pthread_mutex_lock.h\
	fq_rlock.h\
	fq_scanf.h\
	fq_semaphore.h\
	fq_session.h\
	fq_singleton.h\
	fq_sleep.h\
	fq_socket.h\
	fq_syslog.h\
	fq_tci.h\
	fq_tcp_client_obj.h\
	fq_timer.h\
	fq_tokenizer.h\
	fq_typedef.h\
	fq_types.h\
	fq_unixQ.h\
	fq_utl.h\
	fq_version.h\
	fqueue.h\
	fqueues.h\
	fqueue_net.h\
	libedi.h\
	mem_queue.h\
	net_fqueue.h\
	p_libedi.h\
	pstdint.h\
	shm_queue.h\
	uuid.h\
	uuidP.h\
	fq_multi_queue.h\
	fq_sequence.h\
	fq_heartbeat.h\
	fq_trace.h\
	fq_sec_counter.h\
	fq_flock.h\
	fq_map_db.h\
	fq_lsof.h\
	sema_queue.h\
	fq_hashmap.h\
	fq_hashobj.h\
	hash_manage.h\
	hash_info.h\
	hash_info_param.h\
	fq_file_table.h\
	fq_errname.h\
	fq_error_functions.h\
	fq_get_num.h\
	fq_tlpi_hdr.h\
	fq_unix_sockets.h\
	fq_listener.h\
	fq_l4lib.h\
	fq_l4mon.h\
	fq_file_list.h\
	fq_proc_manage.h\
	fq_hash_timestamp.h\
	fq_msg_conv.h\
	fq_mem.h\
	fq_gssi.h\
	fq_delimiter_list.h\
	fq_usrlib.h\
	fq_replace.h\
	fq_json.h\
	fq_md5.h\
	parson.h\
	json_config.h\
	fq_safe_write.h\
	fq_safe_read.h\
	fq_safe_read_multi.h\
	fq_svr_list.h\
	fqueue_callback.h\
	shm_queue_callback.h\
	fq_linkedlist.h\
	fq_launcher.h\
	fq_ratio_distribute.h\
	fq_btree.h\
	fq_btree_obj.h\
	fq_json_tci.h\
	extract_files_from_dir.h
lib_LTLIBRARIES = libfq.la
libfq_la_SOURCES = \
	build.c\
	byteorder.c\
	cipher.c\
	clear.c\
	compare.c\
	copy.c\
	edifact.c\
	fq_atob.c\
	fq_base64_std.c\
	fq_cache.c\
	fq_codemap.c\
	fq_common.c\
	fq_conf.c\
	fq_config.c\
	fq_dir.c\
	fq_eventlog.c\
	fq_external_env.c\
	fq_fstat.c\
	fq_info.c\
	fq_info_param.c\
	fq_log.c\
	fq_manage.c\
	fq_map.c\
	fq_mask.c\
	fq_monitor.c\
	fq_multi_config.c\
	fq_nonblock.c\
	fq_param.c\
	fq_posixlib.c\
	fq_protocol.c\
	fq_pthread_mutex_lock.c\
	fq_rlock.c\
	fq_scanf.c\
	fq_semaphore.c\
	fq_singleton.c\
	fq_sleep.c\
	fq_snprintf.c\
	fq_socket.c\
	fq_socket_no_header.c\
	fq_syslog.c\
	fq_tci.c\
	fq_tcp_client_obj.c\
	fq_timer.c\
	fq_tokenizer.c\
	fq_unixQ.c\
	fq_utl.c\
	fqueue.c\
	fqueues.c\
	gen_uuid.c\
	isnull.c\
	mem_queue.c\
	pack.c\
	parse.c\
	shm_queue.c\
	unpack.c\
	unparse.c\
	uuid_time.c\
	fq_multi_queue.c\
	fq_sequence.c\
	fq_heartbeat.c\
	fq_trace.c\
	fq_sec_counter.c\
	fq_flock.c\
	fq_map_db.c\
	fq_lsof.c\
	sema_queue.c\
	fq_hashmap.c\
	fq_hashobj.c\
	hash_manage.c\
	hash_info.c\
	hash_info_param.c\
	fq_file_table.c\
	fq_error_functions.c\
	fq_unix_sockets.c\
	fq_l4lib.c\
	fq_l4mon.c\
	fq_file_list.c\
	fq_proc_manage.c\
	fq_hash_timestamp.c\
	fq_msg_conv.c\
	fq_mem.c\
	fq_gssi.c\
	fq_delimiter_list.c\
	fq_usrlib.c\
	fq_replace.c\
	fq_json.c\
	fq_md5.c\
	parson.c\
	json_config.c\
	fq_safe_write.c\
	fq_safe_read.c\
	fq_safe_read_multi.c\
	fq_svr_list.c\
	fqueue_callback.c\
	shm_queue_callback.c\
	fq_linkedlist.c\
	fq_launcher.c\
	fq_ratio_distribute.c\
	fq_btree.c\
	fq_btree_obj.c\
	fq_json_tci.c\
	extract_files_from_dir.c
libfq_la_CFLAGS = 
libfq_la_LDFLAGS = -version-info 14:0:0
libfq_la_LIBADD =
